app/tools/scraperr/scraperr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scraperr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: scraperr
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
