app/tools/scraperr/scraperr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: scraperr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: scraperr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: scraperr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - scraperr.home.adaminformatika.hu
    secretName: scraperr.home.adaminformatika.hu
